@@ -12,16 +12,19 @@ import java.io.IOException;
  */
 public class launch {
 	private Process controlPanel;
+	private ServerInput serverInput;
 
 	public void startupControlPanel(String args) throws IOException,
 			InterruptedException {
 		File controlPanel = new File("controlPanel.jar");
-		ProcessBuilder builder = new ProcessBuilder("java -jar "
-				+ controlPanel.getAbsolutePath() +  args);
-		builder.redirectErrorStream(true);
-		builder.redirectOutput();
-		builder.redirectInput();
-		setControlPanel(builder.start());
+		this.controlPanel = Runtime.getRuntime().exec(
+				"java -jar " + controlPanel.getAbsolutePath() + args);
+
+		// server output thread
+		new Thread(new ServerOutput(this.controlPanel)).start();
+		// server input thread
+		serverInput = new ServerInput(this.controlPanel);
+		new Thread(new ServerInput(this.controlPanel)).start();
 	}
 
 	/**
@@ -41,6 +44,25 @@ public class launch {
 	 */
 	public void setControlPanel(Process controlPanel) {
 		this.controlPanel = controlPanel;
+	}
+
+	/**
+	 * Getter for serverInput
+	 * 
+	 * @return the serverInput
+	 */
+	public ServerInput getServerInput() {
+		return serverInput;
+	}
+
+	/**
+	 * Setter for serverInput
+	 * 
+	 * @param serverInput
+	 *            the serverInput to set
+	 */
+	public void setServerInput(ServerInput serverInput) {
+		this.serverInput = serverInput;
 	}
 
 }
